--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.14.20",
+    "@types/tmi.js": "^1.4.3",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "tmi.js": "^1.7.1"
+  },
+  "scripts": {
+    "start": "ts-node-dev --respawn index.ts"
   }
 }
